# ms-ringbuffer

./: .gitmodules  CLAUDE.md  CMakeLists.txt  FUTURE.md  LICENSE  README.md  WalkthroughSPSC.md  build.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml  publish-bench-latest.yml  release.yml
bench/: CMakeLists.txt  README.md
bench/perf/: RingBufferBench.cpp
bench/size/: RingBufferSize.cpp
cmake/: ouroboros_version.h.in
doc/: architecture-guide.md
docs/diagrams/: spsc-ring-buffer.excalidraw
example/: CMakeLists.txt  README.md  basic_usage.cpp  concurrent_spsc.cpp  mpsc_fanin.cpp  spmc_fanout.cpp
inc/: RingBuffer.h
inc/mpsc/: DESIGN.md  RingBuffer.h
inc/spmc/: DESIGN.md  RingBuffer.h
inc/spsc/: RingBuffer.h
test/: BoundaryTest.cpp  ByteRingBufferTest.cpp  CMakeLists.txt  ConcurrentTest.cpp  MpscRingBufferTest.cpp  PodRingBufferTest.cpp  README.md  SpmcRingBufferTest.cpp  StructRingBufferTest.cpp
